finish equipment documentation, move all equipment controllers in a single module
